shop section tablet version needs fixing

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,12 @@ img {
 .section--gray {
   background-color: #f5f5f5;
 }
+@media screen and (max-width: 768px) {
+  .section--shop {
+    padding-top: 8.3333333333rem;
+    padding-bottom: 5.5555555556rem;
+  }
+}
 .section--light-gray {
   background-color: #F8FAF9;
 }
@@ -155,6 +161,28 @@ img {
 .shop {
   display: flex;
   flex-direction: row;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .shop {
+    flex-direction: column;
+    flex: 2;
+  }
+}
+.shop__controls {
+  display: block;
+}
+.shop__btn {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, 0);
+  z-index: 10;
+}
+.shop__btn_right {
+  right: -5.5555555556rem;
+}
+.shop__btn_left {
+  left: -5.5555555556rem;
 }
 .shop__picture {
   margin-right: 60px;
@@ -163,17 +191,10 @@ img {
   height: 25.1111111111rem;
   background: url("../img/content/Ellipse6.png") top -10% center/contain no-repeat;
 }
-.shop__picture::after {
-  position: absolute;
-  left: -100px;
-  top: 50%;
-  content: "";
-  display: block;
-  width: 27px;
-  height: 27px;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  transform: rotate(135deg);
+@media screen and (max-width: 768px) {
+  .shop__picture {
+    display: none;
+  }
 }
 .shop__menu {
   display: block;
@@ -183,23 +204,35 @@ img {
   border-radius: 4px;
   margin-bottom: 1.3888888889rem;
 }
+@media screen and (max-width: 768px) {
+  .shop__menu {
+    display: none;
+  }
+}
 .shop__column {
   width: 50%;
   flex-direction: column;
   align-content: space-between;
-  position: relative;
 }
-.shop__column::before {
-  position: absolute;
-  right: -100px;
-  top: 50%;
-  content: "";
-  display: block;
-  width: 27px;
-  height: 27px;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  transform: rotate(-45deg);
+@media screen and (max-width: 768px) {
+  .shop__column {
+    width: 100%;
+    text-align: center;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 2.7777777778rem;
+  }
+  .shop__column::before {
+    content: "";
+    width: 17.9444444444rem;
+    height: 17.9444444444rem;
+    background: url("../img/content/Ellipse6.png") center center/contain no-repeat;
+    transform: scale(0.8);
+  }
 }
 .shop__title {
   max-width: 23.2777777778rem;
@@ -208,6 +241,12 @@ img {
   font-size: 2rem;
   line-height: 2.3333333333rem;
   margin-bottom: 1.3333333333rem;
+}
+@media screen and (max-width: 768px) {
+  .shop__title {
+    max-width: 100%;
+    text-align: center;
+  }
 }
 .shop__description {
   display: flex;
@@ -224,6 +263,7 @@ img {
   font-size: 36px;
   line-height: 60px;
   color: #151515;
+  margin-right: 0.7222222222rem;
 }
 
 .description {
@@ -723,6 +763,21 @@ img {
 .btn--transparrent:hover {
   color: #000;
   transition: 0.7s;
+}
+
+.shop__btn {
+  content: "";
+  display: block;
+  width: 27px;
+  height: 27px;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+}
+.shop__btn_right {
+  transform: rotate(-45deg);
+}
+.shop__btn_left {
+  transform: rotate(135deg);
 }
 
 .form {
