--- a/styles/components/section.scss
+++ b/styles/components/section.scss
@@ -33,6 +33,13 @@
     &--gray{
         background-color: #f5f5f5;
     }
+
+    &--shop{
+        @include tablets{
+            padding-top: rem(150px);
+            padding-bottom: rem(100px);
+        }
+    }
     &--light-gray{
         background-color: $light-gray;
     }
